ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: managed-cert-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: mkkang-static-ip
    networking.gke.io/managed-certificates: mkkang-cert
    networking.gke.io/v1beta1.FrontendConfig: my-frontend-config
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: front-node-service
      port:
        number: 80
